[gd_scene load_steps=14 format=3 uid="uid://cacpnrqbyn4vh"]

[ext_resource type="Script" path="res://scenes/UI/tutorial.gd" id="1_f3fpr"]
[ext_resource type="FontFile" uid="uid://beoqupkvxqtfg" path="res://sprites_fonts/Ruthligos.ttf" id="2_k6iyi"]
[ext_resource type="AudioStream" uid="uid://4u67upa4cf4v" path="res://audio/MMMusic.mp3" id="3_vx62u"]

[sub_resource type="Gradient" id="Gradient_3djjs"]
offsets = PackedFloat32Array(0.959627)
colors = PackedColorArray(0.331495, 0, 0.0342225, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_252ug"]
gradient = SubResource("Gradient_3djjs")

[sub_resource type="SystemFont" id="SystemFont_tx3c7"]
font_names = PackedStringArray("Book Antiqua")

[sub_resource type="LabelSettings" id="LabelSettings_sl6kj"]
font = SubResource("SystemFont_tx3c7")
font_size = 40
font_color = Color(1, 0.662745, 0.619608, 0.447059)

[sub_resource type="SystemFont" id="SystemFont_a2ual"]
font_names = PackedStringArray("Book Antiqua")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5ejk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8elp"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2t0dx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rghb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dbity"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3fpr")

[node name="page1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_252ug")

[node name="title" type="Label" parent="page1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Controls"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Label" parent="page1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "W                         ‚Üë
S A D       or        ‚Üê‚Üì‚Üí  
‚≠í to move
‚≠í Q to light star
‚≠í E to interact
‚≠í [SPACE] to jump
‚≠í [ESC] to pause/resume"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="page2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_252ug")

[node name="title" type="Label" parent="page2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Recharging Light"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Label" parent="page2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "‚≠í Standing near light sources recharges your star.
‚≠í Each light source has a maximum amount it can
recharge, and it recharges it by a specific power
before it enters cool down.
‚≠íA light source will flicker when only one recharge 
remains.
‚≠íAfter a light source runs out of light, it is no longer 
usable."
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1

[node name="page3" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_252ug")

[node name="title" type="Label" parent="page3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Fallen Stars"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Label" parent="page3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "‚≠í Each level has 10 fallen stars (including endless).
‚≠í Collect all 10 to move on.
‚≠í Fallen stars make a chiming noise at intervals to
assist in locating them.
‚≠í Collecting fallen stars does not
 recharge your star.

"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1

[node name="page4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_252ug")

[node name="title" type="Label" parent="page4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Enemies"
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Label" parent="page4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
text = "‚≠í The enemies are afraid of light; shine your 
light near enemies to attack them.
‚≠í Continuously shining your light will deplete the
stars energy.
‚≠í Enemies make an annoying breathing sound that
mask the chimes of the stars
‚≠í Recharge the star at light sources."
label_settings = SubResource("LabelSettings_sl6kj")
horizontal_alignment = 1

[node name="page5" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_252ug")

[node name="gameTitle" type="Label" parent="page5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_right = 228.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.745098, 0.262745, 0.203922, 0.498039)
theme_override_fonts/font = ExtResource("2_k6iyi")
theme_override_font_sizes/font_size = 90
text = "Star Seeker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -34.5
offset_right = 81.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.682353, 0.227451, 0.172549, 0.560784)
theme_override_fonts/font = SubResource("SystemFont_a2ual")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_e5ejk")
theme_override_styles/hover = SubResource("StyleBoxFlat_y8elp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2t0dx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1rghb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbity")
text = "ìáª  Play"

[node name="next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.682353, 0.227451, 0.172549, 0.560784)
theme_override_fonts/font = SubResource("SystemFont_a2ual")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_e5ejk")
theme_override_styles/hover = SubResource("StyleBoxFlat_y8elp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2t0dx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1rghb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbity")
text = "Next"

[node name="prev" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.682353, 0.227451, 0.172549, 0.560784)
theme_override_fonts/font = SubResource("SystemFont_a2ual")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_e5ejk")
theme_override_styles/hover = SubResource("StyleBoxFlat_y8elp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2t0dx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1rghb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbity")
text = "Previous"

[node name="skip" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.682353, 0.227451, 0.172549, 0.560784)
theme_override_fonts/font = SubResource("SystemFont_a2ual")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_e5ejk")
theme_override_styles/hover = SubResource("StyleBoxFlat_y8elp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2t0dx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1rghb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbity")
text = "Skip"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vx62u")

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="skip" to="." method="_on_skip_pressed"]
